slurm-27531754.out
  File "t5chem/run_trainer.py", line 25
    tokenizer_map: Dict[str, MolTokenizer] = {
                 ^
SyntaxError: invalid syntax
